--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-[200~ .classpath
-  .project
-  /node_modules
+ .classpath
+        .gitignore
+        .project
+        gitignore
+        node_modules/
+
